# piv-convention

./: README.md  setup.cfg
piv_convention/: __init__.py
piv_convention/planar/: __init__.py  convention.py  general_attributes.py  layout.py  piv_medium.py  piv_settings.py
piv_convention/planar/standard_name_table/: README.md  particle_image_velocimetry-v1.yaml  sort.py  test.py
tests/: test_planar.py
