[metadata]
name = piv_convention
version = 0.1.0
author = Matthias Probst
author_email = matthias.probst@kit.edu
description = Repository managing the PIV convention
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/matthiasprobst/piv_convention
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta

[options]
packages = find:
python_requires = !=3.8
include_package_data = True
install_requires =
    h5rdmtoolbox @ git+https://github.com/matthiasprobst/h5RDMtoolbox@v0.6.5a0

[options.extras_require]
test =
    pytest

[tool:pytest]
python_files = test_*.py
testpaths = tests

[coverage:paths]
source =
    tests
